Updated email address

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : InTouch
 tagline: Keeping you in touch with your network
 author :
   name : InTouch
-  email : intouch@email.test
+  email : ibraheemkhalifa@gmail.com
   github : intouchapp
   twitter : intouchapp
 
